--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "4.1.0",
     "gulp-clean-css": "^3.9.2",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sass-glob": "^1.0.8"
+    "gulp-sass-glob": "^1.0.8",
+    "gulp-uglify": "^3.0.1"
   }
 }
