--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^3.9.2",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^5.0.3",
     "gulp-noop": "^1.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
